<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".CreateAccountActivity"
    android:background="@drawable/gradient_bg">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sign_up_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_details"
            android:gravity="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginTop="10dp"/>

        <AutoCompleteTextView
            android:id="@+id/sign_up_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/sign_up_email_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/sign_up_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_light"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/sign_up_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

</LinearLayout>