<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="18dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_bg">


        <TextView
        android:id="@+id/start_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/start_message"
        android:textSize="30sp" />


    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/start_relativeLayout">


    <androidx.cardview.widget.CardView
        android:layout_height="90dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="6dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="19sp"
            android:text="@string/start_text"
            android:id="@+id/gratefulText"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/get_started_text"
        android:id="@+id/startButton"
        android:textColor="@android:color/holo_orange_dark"
        />



</LinearLayout>